# agent-native-architecture

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
agent_native_app/: __init__.py  agent.py  cli.py  config.py  logging_config.py  store.py  tools.py
agent_native_app/prompts/: system.md
ai_first_app/: __init__.py  cli.py  config.py  logging_config.py
ai_first_app/prompts/: system.md
docs/: article.md  blog-post-the-app-is-dead.md  current-notes.md  diagrams.md  editor-notes.md  global-context.md  implementation-plan.md  mem-management.md  research-notes.md
scripts/: db_describe.py  migrate_embed_props.py
tests/: test_store.py
